05 Aug 2006 Added addressing mode in panel - Bernard van der Helm
03 Aug 2006 Add official support for 3590 tape device types using 32-bit
            block-ids affecting LOCATE BLOCK, etc / BOT detection - Fish
03 Aug 2006 New conspawn keyword: 'startgui' to start Windows GUI
            application via ShellExecute to prevent hang at exit - Fish
01 Aug 2006 PR# misc/94: Sporadic missed .RC file processing - Fish
21 Jul 2006 Small change to ECPS:VM fix by P. Coghlan - Ivan Warren
21 Jul 2006 Several small bugfixes from Peter Coghlan - Jay Maynard
21 Jul 2006 read_socket and write_socket wrapper routines to fix short
            read problems for sockdev card readers (new source file
            hsocket.c) - Robert Styma and Jay Maynard
02 Jul 2006 PR# network/93: honor specified CTCI-W32 buffer sizes - Fish
28 Jun 2006 Fix doubled/duplicated startup 'version' logmsgs caused by
            PR# misc/87 when Herc is run in daemon/hercgui mode  - Fish
25 Jun 2006 Fix seq dasdload blksize pad bug - Peter Sylvester
            [peter.sylvester@edelweb.fr] by Fish
23 Jun 2006 PR#s misc/21 and PR# network/62: HTTP Server: do 'shutdown'
            to gracefully close connection before closing the socket - Fish
22 Jun 2006 Back out incorrect modification to BFPREGPAIR macros - Roger Bowler
21 Jun 2006 Correct unresolved external symbol __imp__debug_tt32_tracing - Roger Bowler
21 Jun 2006 Correct BFPREGPAIR checks to prevent spurious 0C6 - Roger Bowler
18 Jun 2006 Add diagnose 0x308 - re-ipl - Bernard van der Helm
13 Jun 2006 Add diagnose 0x224 - CPU name array - Greg Smith
13 Jun 2006 Added diagnose 308 reipl. Not activated in feat900.h! - Bernard
11 Jun 2006 PR# tape/88: "SCSI tape issues": 1. WTM failures with some
            mfg/model drives (e.g. STK4890), 2. Spurious HHCTA073W for
            'rewind-at-close' devtype - Fish
10 Jun 2006 PR# misc/87: Herc system startup message issuance problem - Fish